# Java

C++/Battleship/src/app/: Player.cpp  Player.h
C++/Calculator/src/app/: app.cpp  app.h  main.cpp
C++/blatt9/: CMakeLists.txt  Textaufgabe.txt
C++/blatt9/src/: CMakeLists.txt
C++/blatt9/src/app/: Constants.h  app.cpp  app.h  main.cpp
C++/blatt9/src/libObjects/: Ray.h  Sphere.h  Vec.h
HTML/Habits/: main.cpp  main.html
HTML/Habits/login/: login.html  loginStyle.css
Java/: HelloWorld.java  ToDo.java
Java/Algorithms and Datastructures/Binary Trees/: Main.java  Tree.java
Java/Algorithms and Datastructures/Sorting-Algorithms/: Array.java  Main.java  Sort.java
Java/Apps/ToDo/: Constants.java  Gui.java  Heading.java  Image.java  Links.txt  Main.java  MenuPanel.java  Textfield.java
Java/SchiffeVersenken/: SchiffeVersenken.java
Java/VierGewinnt/: Spielfeld.java  VierGewinnt.java
blatt3/blatt3/: CMakeLists.txt
blatt3/blatt3/src/: CMakeLists.txt
blatt3/blatt3/src/app/: CMakeLists.txt  game.cpp  game.h  init.cpp  init.h  main.cpp  test.cpp  test.h
blatt3/blatt3/src/libGameObjects/: CMakeLists.txt  Constants.h  Missile.cpp  Missile.h  PlayerSea.cpp  PlayerSea.h  Ship.cpp  Ship.h
blatt3/blatt3/src/libSea/: CMakeLists.txt  Coordinates.cpp  Coordinates.h  Object.cpp  Object.h
